[gd_scene load_steps=6 format=3 uid="uid://skjp570182hy"]

[ext_resource type="Texture2D" uid="uid://iwpp8reegaan" path="res://Screenshot 2025-03-13 110926 1.png" id="1_cd5v0"]
[ext_resource type="Script" uid="uid://cos2dulrid7qg" path="res://option.gd" id="1_rtwqn"]
[ext_resource type="Texture2D" uid="uid://ck5gjge25jyeg" path="res://keyboard_backspace_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 2.png" id="3_l82yo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6ia3"]
bg_color = Color(0.878431, 0.694118, 0.537255, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="GDScript" id="GDScript_slay5"]
script/source = "extends Button
"

[node name="Option" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtwqn")

[node name="Screenshot2025-03-131109261" type="Sprite2D" parent="."]
modulate = Color(0.687215, 0.687215, 0.687215, 1)
position = Vector2(576, 324)
scale = Vector2(1.36493, 1.66154)
texture = ExtResource("1_cd5v0")

[node name="Option" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -106.5
offset_top = 101.0
offset_right = 106.5
offset_bottom = 189.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Option"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -34.0
offset_right = 121.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="Music" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Music"

[node name="HSlider(Music)" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="SFX" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "SFX"

[node name="HSlider2(SFX)" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 44.0
offset_right = 124.0
offset_bottom = 102.0
scale = Vector2(1.2, 1.2)
theme_override_icons/icon = ExtResource("3_l82yo")
theme_override_styles/normal = SubResource("StyleBoxFlat_c6ia3")
icon_alignment = 1
script = SubResource("GDScript_slay5")

[connection signal="value_changed" from="VBoxContainer/HSlider(Music)" to="." method="_on_h_slider_music_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
